[B]Version 4.2.5[/B]
    -CF Added
    
[B]Version 4.2.4[/B]
    -first time install blank folders
[B]Version 4.2.3[/B]
    -little bug
[B]Version 4.2.2[/B]
    -little bug
[B]Version 4.2.1[/B]
    -better ptc decoding
    
[B]Version 4.2.0[/B]
    -PTC fixed and ary zindagi and other ary channels
    
[B]Version 4.1.9[/B]
    -willow, check for error
    
[B]Version 4.1.8[/B]
    -SS is back...but hardcoded ids
    
[B]Version 4.1.7[/B]
    -KTN news
    
[B]Version 4.1.6[/B]
    -movies section
    
[B]Version 4.1.5[/B]
    -sports section reshuffle, removed few
    
[B]Version 4.1.4[/B]
    -added caching support for faster channel list
[B]Version 4.1.3[/B]
    -added v8
[B]Version 4.1.2[/B]
    -duplication removed
[B]Version 4.1.1[/B]
    -added v7
    
[B]Version 4.1.0[/B]
    -v3.v6 updated colours and settings to turn them off
    
[B]Version 4.0.9[/B]
    -v3 updated and p3g/streams updated in sports
[B]Version 4.0.8[/B]
    -v3 updated
[B]Version 4.0.7[/B]
    -sports section updated for smartcric and crifree
    
[B]Version 4.0.6[/B]
    -v5 updated retry logic
[B]Version 4.0.5[/B]
    -v5 updated

[B]Version 4.0.4[/B]
    -DM bug

[B]Version 4.0.3[/B]
    -retry bug
    
[B]Version 4.0.2[/B]
    -retry login for v5 and updated link for external source 
    
[B]Version 4.0.1[/B]
    -removed sports not working, added support for v5 to get it from external place 
    
[B]Version 3.9.9[/B]
    -added v5 channels, and new additionm in sports 
    
[B]Version 3.9.8[/B]
    -added back green v4, Makkah and Madinah youtube live
    
[B]Version 3.9.7[/B]
    -updated sports channels
    
[B]Version 3.9.6[/B]
    -merged yellow and green channels together
    -smartcric fixed
    -added See TV

    
[B]Version 3.9.4[/B]
    -fixed yellow channels
    -fixed ebound video source
    - added support for VidRail


[B]Version 3.9.4[/B]
few v4 channels, not all working

[B]Version 3.9.3[/B]
Stop normal green for time being


[B]Version 3.9.2[/B]
Implemented CF check
