@@ -18,6 +18,7 @@
     <string id="32030">Turn off v8 Channels</string>  
     <string id="32032">Turn off Ditto Channels</string>  
     <string id="32033">Turn off CF Channels</string>  
+    <string id="32034">Turn off Ipbox Channels</string>  
     <string id="32031">Do not cache</string>  
     <string id="32023">SSS Maxbitrate</string>
         <string id="32024">Willow US Proxy Address</string>
